--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "ethers": "^6.8.0",
+    "html2canvas": "^1.4.1",
     "next": "^14.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -24,4 +25,3 @@
     "typescript": "^5.2.2"
   }
 }
-
